Bug 98834 - Screen not refreshed after 1106b2f773ad0611c729b27f4c192a26b43ef1e7
Summary: Screen not refreshed after 1106b2f773ad0611c729b27f4c192a26b43ef1e7
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 98849 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-23 17:44 UTC by Marcin Deranek
Modified: 2016-12-02 07:15 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg log file (47.02 KB, text/plain)
2016-11-23 17:44 UTC, Marcin Deranek
no flags Details
dmesg output (49.72 KB, text/plain)
2016-11-23 17:54 UTC, Marcin Deranek
no flags Details

Description Marcin Deranek 2016-11-23 17:44:30 UTC
Created attachment 128169 [details]
Xorg log file

Regression with commit 1106b2f773ad0611c729b27f4c192a26b43ef1e7 on Radeon R9 270x (PITCAIRN). After this commit I get the following messages in Xorg.log (none of these has been seen before):

(WW) RADEON(0): flip queue failed in radeon_scanout_flip: No such file or directory

Seems like refresh is broken as switching to VT and back shows updated content. Let me know if you need more details.
Comment 1 Alex Deucher 2016-11-23 17:48:19 UTC
Please attach your dmesg output as well.  What kernel are you using?
Comment 2 Marcin Deranek 2016-11-23 17:54:02 UTC
After further investigation it turned out that commit 1106b2f773ad0611c729b27f4c192a26b43ef1e7 does not play nicely with

Option "TearFree" "true"

Commenting out above gets things back to normal.
I'm running kernel 4.8.10.
Comment 3 Marcin Deranek 2016-11-23 17:54:42 UTC
Created attachment 128170 [details]
dmesg output
Comment 4 Michel Dänzer 2016-11-25 03:52:11 UTC
*** Bug 98849 has been marked as a duplicate of this bug. ***
Comment 5 Michel Dänzer 2016-11-25 03:54:24 UTC
commit 5fea5ef2f07eee4a0f94baab427010b936f1d4b4
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Thu Nov 24 18:45:22 2016 +0900

    Pass fb_id into drmmode_page_flip_target_absolute/relative


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.